[package]
name = "panoramix"
version = "0.0.3"
license = "MIT"
authors = ["Olivier FAURE <couteaubleu@gmail.com>"]
description = "A prototype implementation of reactive UI in rust"
repository = "https://github.com/PoignardAzur/panoramix"
categories = ["gui"]
keywords = ["gui", "toolkit", "reactive", "declarative", "druid"]
readme = "README.md"
edition = "2018"

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "37d2a18f3fc386cae8739716ea1e39a61db00b70"
version = "0.7.0"
features = ["crochet"]

[dependencies]
panoramix-derive = { version = "0.0.2", path = "./panoramix-derive" }

derivative = "2.1.3"
either = "1.6.1"
log = "0.4.11"
tracing = "0.1.22"
tracing-unwrap = "0.9.2"
tracing-subscriber = "0.2.15"

[dev-dependencies]
insta = "1.5.1"
test-env-log = { version = "0.2.4", default-features = false, features = ["trace"] }
tracing-log = "0.1.1"
